--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="Images/Profile.png" alt="Ansana Reuben Sesay" width="80" height="250">
+          <img src="Images/Profile.png" alt="Ansana Reuben Sesay" class="profile-img">
         </figure>
+        
 
         <div class="info-content">
           <h1 class="name" title="Ansana Reuben Sesay">Ansana Reuben <br>  Sesay</h1>
